Changes to logos and homepage

--- a/creative-studio/blog.html
+++ b/creative-studio/blog.html
@@ -7,7 +7,7 @@
     <!-- Page Title -->
     <title>MegaOne - Creative Blog</title>
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon.png">
     <!-- Bundle -->
     <link rel="stylesheet" href="../vendor/css/bundle.min.css">
     <!-- Plugin Css -->
@@ -59,13 +59,13 @@
             </a>
             <div class="collapse navbar-collapse d-none d-lg-block">
                 <ul class="nav navbar-nav mx-auto">
-                    <li class="nav-item"> <a href="../index-creative-studio.html#home" class="nav-link">home</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#about" class="nav-link">about</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#work" class="nav-link">work</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#pricing" class="nav-link">pricing</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#clients" class="nav-link">clients</a></li>
+                    <li class="nav-item"> <a href="../index.html#home" class="nav-link">home</a></li>
+                    <li class="nav-item"> <a href="../index.html#about" class="nav-link">about</a></li>
+                    <li class="nav-item"> <a href="../index.html#work" class="nav-link">work</a></li>
+                    <li class="nav-item"> <a href="../index.html#pricing" class="nav-link">pricing</a></li>
+                    <li class="nav-item"> <a href="../index.html#clients" class="nav-link">clients</a></li>
                     <li class="nav-item"> <a href="#blog" class="nav-link scroll active">blog</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#contact" class="nav-link">contact</a></li>
+                    <li class="nav-item"> <a href="../index.html#contact" class="nav-link">contact</a></li>
                 </ul>
             </div>
             <!-- side menu open button -->
@@ -94,13 +94,13 @@
             </div>
             <nav class="side-nav m-0">
                 <ul class="navbar-nav flex-lg-row">
-                    <li class="nav-item"> <a href="../index-creative-studio.html#home" class="nav-link">home</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#about" class="nav-link">about</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#work" class="nav-link">work</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#pricing" class="nav-link">pricing</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#clients" class="nav-link">clients</a></li>
+                    <li class="nav-item"> <a href="../index.html#home" class="nav-link">home</a></li>
+                    <li class="nav-item"> <a href="../index.html#about" class="nav-link">about</a></li>
+                    <li class="nav-item"> <a href="../index.html#work" class="nav-link">work</a></li>
+                    <li class="nav-item"> <a href="../index.html#pricing" class="nav-link">pricing</a></li>
+                    <li class="nav-item"> <a href="../index.html#clients" class="nav-link">clients</a></li>
                     <li class="nav-item"> <a href="#blog" class="scroll nav-link active">blog</a></li>
-                    <li class="nav-item"> <a href="../index-creative-studio.html#contact" class="nav-link">contact</a></li>
+                    <li class="nav-item"> <a href="../index.html#contact" class="nav-link">contact</a></li>
                 </ul>
             </nav>
 
@@ -128,7 +128,7 @@
             <div class="col-md-12 page-content position-relative text-white text-center">
                 <h2 class="mb-3">Blog Posts</h2>
                 <h6 class="mb-2 text-white text-capitalize">daily inspiration and tips to supercharge your mind.</h6>
-                <a href="../index-creative-studio.html" class="d-inline-block text-white">Home</a> <span><i class="fa fa-angle-double-right font-13"></i> Blog</span>
+                <a href="../index.html" class="d-inline-block text-white">Home</a> <span><i class="fa fa-angle-double-right font-13"></i> Blog</span>
             </div>
         </div>
     </div>
