--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>MegaOne - Creative Studio</title>
+    <title>Brandidly - Creative Agency</title>
     <!-- Favicon -->
-    <link rel="icon" href="creative-studio/img/favicon.ico">
+    <link rel="icon" href="creative-studio/img/favicon.png">
     <!-- Bundle -->
     <link rel="stylesheet" href="vendor/css/bundle.min.css">
     <!-- Plugin Css -->
@@ -67,7 +67,7 @@
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
             </div>
-            <a href="javascript:void(0)" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +1 631 112 1134</a>
+            <a href="javascript:void(0)" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 84 927 6408</a>
             <!-- side menu open button -->
             <a class="menu_bars d-inline-block menu-bars-setting animated-wrap sidemenu_toggle d-block d-lg-none">
                 <div class="menu-lines animated-element">
@@ -118,7 +118,7 @@
                     <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-instagram color-white"></i> </a> </li>
                     <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-twitter color-white"></i> </a> </li>
                 </ul>
-                <p class="text-white">&copy; 2020 MegaOne. Made With Love by Themesindustry</p>
+                <p class="text-white">&copy; 2020 Brandidly. Made With Love by Brandidly</p>
             </div>
         </div>
     </div>
@@ -182,7 +182,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 10; min-width: 556px; max-width: 556px; white-space: nowrap; font-weight: 700; letter-spacing: 0px;font-family: 'Montserrat', sans-serif;"><div id="js-rotating">Digital Agency, Modern Works, Design Elevation </div> </div>
+                         style="z-index: 10; min-width: 556px; max-width: 556px; white-space: nowrap; font-weight: 700; letter-spacing: 0px;font-family: 'Montserrat', sans-serif;"><div id="js-rotating"> Marketing Agency, Digital Agency </div> </div>
 
                     <!-- LAYER Text -->
                     <div class="tp-caption color-black"
@@ -201,7 +201,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 10; min-width: 650px; max-width: 650px; white-space: nowrap; font-weight: 400; letter-spacing: 0px;font-family: 'Source Sans Pro', sans-serif;">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy.
+                         style="z-index: 10; min-width: 650px; max-width: 650px; white-space: nowrap; font-weight: 400; letter-spacing: 0px;font-family: 'Source Sans Pro', sans-serif;">We are a modern creative agency located in Maputo Mozambique, determined to provide the best services to our clients, whether it be in Digital Marketing or any other kind of Innovative Services.
                     </div>
 
                     <!-- LAYER Button -->
@@ -212,7 +212,7 @@
                          data-textAlign="['center','center','center','center']"
                          data-width="['160','160','160','160']"
                          style="z-index: 10; min-width: 960px; max-width: 960px">
-                        <a href="javascript:void(0)" class="btn-setting color-black btn-hvr-up btn-hvr-yellow link">learn more</a>
+                        <a href="#about" class="btn-setting color-black btn-hvr-up btn-hvr-yellow link">learn more</a>
                     </div>
 
                     <!-- LAYER Cylinder -->
