--- a/index.html
+++ b/index.html
@@ -575,14 +575,17 @@
             </div>
             <div class="col-lg-6 pl-6">
                 <div class="main-title text-lg-left offset-md-1 mb-0 wow fadeInUp" data-wow-delay="300ms">
-                    <h5 class="wow fadeInUp" data-wow-delay="300ms"> Lorem ipsum dolor sit amet consectetur </h5>
-                    <h2 class="wow fadeInUp font-weight-light" data-wow-delay="400ms"> We are making <span class="color-pink">design</span> better for everyone</h2>
-                    <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed augue diam, accumsan vitae justo non, euismod aliquam lectus. Etiam elementum tortor quis risus posuere, in cursus arcu lobortis.</p>
+                    <h5 class="wow fadeInUp" data-wow-delay="300ms"> A Brand is a promise we help you
+                    deliver </h5>
+                    <h2 class="wow fadeInUp font-weight-light" data-wow-delay="400ms"> We are making <span class="color-pink">innovation</span> available for everyone</h2>
+                    <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">New Digital agency based in
+                        Maputo, Mozambique. We are driven by the passion to bring digital transformation in the evergrowing market of Mozambique. Digital Solutions that can potentially make businesses re-imagine how businesses succeed using digital platforms to increase revenue. Our Goals:<p>
 
                     <ul class="pb-5 text-left wow fadeInUp" data-wow-delay="600ms">
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Morbi ornare nibh id cursus vestibulum.</li>
-                        <li>Duis vitae lectus facilisis, tristique lorem sit amet, malesuada diam.</li>
+                        <li>Provide every type of digital solution to Small and Medium Entreprises 
+                        (SMEs).</li>
+                        <li>Improve revenue for large entreprises using different marketing techniques.</li>
+                        <li>Become the leading Creative Agency in Mozambique by providing services that benefits all our clients and in turn increasing their revenues.</li>
                     </ul>
 
                     <a href="javascript:void(0)" class="btn-setting color-black btn-hvr-up btn-yellow btn-hvr-pink text-white link wow fadeInUp" data-wow-delay="700ms">learn more</a>
@@ -607,19 +610,48 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-blue">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-pencil-alt"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">branding design</h5>
-                    <p class="font-weight-light color-white">Lorem dapibus, tortor eget turpis auctor, convallis odio ac.</p>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">branding</h5>
+                    <p class="font-weight-light color-white">Branding can change how people perceive your brand, it can drive new business and increase brand awareness.
+                        <br>
+                        <br></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-yellow">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-cog"></i></span>
                     <h5 class="font-weight-500 color-white mt-25px mb-15px">SEO Marketing</h5>
-                    <p class="font-weight-light color-white">Etiam luctus, lacus maximus elementum dapibus felis.</p>
+                    <p class="font-weight-light color-white">SEO stands for “search engine optimization.” It is the process of getting traffic from the “free,” “organic,” “editorial” or “natural” search results on search engines.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-12">
                 <div class="about-box mb-0 mx-auto bg-pink">
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-code"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">web development</h5>
+                    <p class="font-weight-light color-white">Web development refers to building, creating, and an maintaining websites. It includes aspects such as web design, web publishing, web programming, and database management.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+        <br>
+        <br>
+     <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="about-box mb-5 mb-lg-0 mx-auto bg-red">
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-pencil-alt"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">branding design</h5>
+                    <p class="font-weight-light color-white">Lorem dapibus, tortor eget turpis auctor, convallis odio ac.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="about-box mb-5 mb-lg-0 mx-auto bg-purple">
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-cog"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px">SEO Marketing</h5>
+                    <p class="font-weight-light color-white">Etiam luctus, lacus maximus elementum dapibus felis.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 col-12">
+                <div class="about-box mb-0 mx-auto bg-orange">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-code"></i></span>
                     <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">web development</h5>
                     <p class="font-weight-light color-white">Pellentesque habitant morbi tristique senectus et malesuada.</p>
@@ -627,6 +659,7 @@
             </div>
         </div>
     </div>
+
 </section>
 <!-- About Boxes ends -->
 
