--- a/index.html
+++ b/index.html
@@ -638,16 +638,16 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-red">
-                    <span class="pro-step d-inline-block color-white"><i class="fa fa-pencil-alt"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">branding design</h5>
-                    <p class="font-weight-light color-white">Lorem dapibus, tortor eget turpis auctor, convallis odio ac.</p>
+                    <span class="pro-step d-inline-block color-white"><i class="fas fa-marker"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Copywriting</h5>
+                    <p class="font-weight-light color-white">Copywriting is the art of science of strategically crafting and publishing targeted reader focused ("copy") online that can get people to take some form of action.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-purple">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-cog"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px">SEO Marketing</h5>
-                    <p class="font-weight-light color-white">Etiam luctus, lacus maximus elementum dapibus felis.</p>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px">Creative Campaigns</h5>
+                    <p class="font-weight-light color-white"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-12">
@@ -1270,7 +1270,7 @@
                     <li><a href="javascript:void(0)" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown pinterest"><i class="fab fa-pinterest-p"></i> </a> </li>
                 </ul>
-                <p class="copyrights mt-2 mb-2">© 2020 MegaOne. Made with love by <a href="javascript:void(0)">themesindustry</a></p>
+                <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Made with love by <a href="brandid.ly">brandidly</a></p>
             </div>
         </div>
     </div>
