--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
                     <li><a href="javascript:void(0)" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown pinterest"><i class="fab fa-pinterest-p"></i> </a> </li>
                 </ul>
-                <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Made with love by <a href="*">brandidly</a></p>
+                <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Made with love by <a href="#">brandidly</a></p>
             </div>
         </div>
     </div>
