Added all information on home page

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                 <ul class="nav navbar-nav mx-auto">
                     <li class="nav-item"> <a href="#home" class="scroll nav-link">home</a></li>
                     <li class="nav-item"> <a href="#about" class="scroll nav-link">about</a></li>
-                    <li class="nav-item"> <a href="#work" class="scroll nav-link">work</a></li>
+                   <!--  <li class="nav-item"> <a href="#work" class="scroll nav-link">work</a></li>
                     <li class="nav-item"> <a href="#pricing" class="scroll nav-link">pricing</a></li>
-                    <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li>
+                    <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li> -->
+                    <li class="nav-item"> <a href="#contact-us" class="scroll nav-link">contact us</a></li>
                     <li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
@@ -104,9 +105,10 @@
                 <ul class="navbar-nav flex-lg-row">
                     <li class="nav-item"> <a href="#home" class="scroll nav-link">home</a></li>
                     <li class="nav-item"> <a href="#about" class="scroll nav-link">about</a></li>
-                    <li class="nav-item"> <a href="#work" class="scroll nav-link">work</a></li>
-                    <li class="nav-item"> <a href="#pricing" class="scroll nav-link">pricing</a></li>
-                    <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li>
+                    <!-- <li class="nav-item"> <a href="#work" class="scroll nav-link">work</a></li>
+                    <li class="nav-item"> <a href="#pricing" class="scroll nav-link">pricing</a></li> -->
+                    <!-- <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li> -->
+                    <li class="nav-item"> <a href="#contact-us" class="scroll nav-link">contact us</a></li>
                     <li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
@@ -610,23 +612,24 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-blue">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-pencil-alt"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">branding</h5>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Branding</h5>
                     <p class="font-weight-light color-white">Branding can change how people perceive your brand, it can drive new business and increase brand awareness.
                         <br>
-                        <br></p>
+                        <br>
+                       </p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-yellow">
-                    <span class="pro-step d-inline-block color-white"><i class="fa fa-cog"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px">SEO Marketing</h5>
-                    <p class="font-weight-light color-white">SEO stands for “search engine optimization.” It is the process of getting traffic from the “free,” “organic,” “editorial” or “natural” search results on search engines.</p>
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-cloud"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px">Cloud Services</h5>
+                    <p class="font-weight-light color-white">Cloud computing gives users access to data wherever they have an internet connection. In today's ever-changing world,business owners get what they need right when they need it.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-12">
                 <div class="about-box mb-0 mx-auto bg-pink">
                     <span class="pro-step d-inline-block color-white"><i class="fa fa-code"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">web development</h5>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Web Development</h5>
                     <p class="font-weight-light color-white">Web development refers to building, creating, and an maintaining websites. It includes aspects such as web design, web publishing, web programming, and database management.</p>
                 </div>
             </div>
@@ -645,16 +648,16 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-purple">
-                    <span class="pro-step d-inline-block color-white"><i class="fa fa-cog"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px">Creative Campaigns</h5>
-                    <p class="font-weight-light color-white"></p>
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-rocket"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px">Digital Marketing</h5>
+                    <p class="font-weight-light color-white">Digital marketing is a method of marketing a product with the help of digital mediums. Digital marketing focuses on the services available on the internet but it is much more.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 col-12">
                 <div class="about-box mb-0 mx-auto bg-orange">
-                    <span class="pro-step d-inline-block color-white"><i class="fa fa-code"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">web development</h5>
-                    <p class="font-weight-light color-white">Pellentesque habitant morbi tristique senectus et malesuada.</p>
+                    <span class="pro-step d-inline-block color-white"><i class="fa fa-camera"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Photo/Video Production</h5>
+                    <p class="font-weight-light color-white">Bring your brand into focus with professional photography and engaging video. These can change the way people perceive your brand <br>&nbsp;</p>
                 </div>
             </div>
         </div>
@@ -669,7 +672,6 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="main-title wow fadeIn" data-wow-delay="300ms">
-                    <h5> Lorem ipsum dolor sit amet </h5>
                     <h2 class="mb-0">Our <span class="color-pink">Creative</span> Team </h2>
                 </div>
             </div>
@@ -680,9 +682,9 @@
                     <img src="creative-studio/img/team1.jpg" alt="team1" class="m-image1">
                 </div>
                 <div class="team-classic-content hvr-team pink">
-                    <h3 class="mb-3 text-capitalize color-black">Jessica Jones</h3>
-                    <h5 class="mb-3 text-capitalize color-pink">Lead Designer</h5>
-                    <p class="mt-3 mb-3 color-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit augue.</p>
+                    <h3 class="mb-3 text-capitalize color-black">Abdul Basit</h3>
+                    <h5 class="mb-3 text-capitalize color-pink">Marketing Assistant</h5>
+                    <p class="mt-3 mb-3 color-black">Specializes in Photography and Videography</p>
                     <ul class="team-social">
                         <li class="d-inline-block"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                         <li class="d-inline-block"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -699,9 +701,9 @@
                     </div>
                     <div class="col-md-12 order-md-0">
                         <div class="team-classic-content hvr-team2 blue">
-                            <h3 class="mb-3 text-capitalize color-black">Rob Clark</h3>
-                            <h5 class="mb-3 text-capitalize color-blue">marketing head</h5>
-                            <p class="mt-3 mb-3 color-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit augue.</p>
+                            <h3 class="mb-3 text-capitalize color-black">Muhammad Warid</h3>
+                            <h5 class="mb-3 text-capitalize color-blue">CTO/Marketing Head</h5>
+                            <p class="mt-3 mb-3 color-black">Founder of the company.</p>
                             <ul class="team-social">
                                 <li class="d-inline-block"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                                 <li class="d-inline-block"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -717,9 +719,9 @@
                     <img src="creative-studio/img/team3.jpg" alt="team3" class="m-image3">
                 </div>
                 <div class="team-classic-content hvr-team yellow">
-                    <h3 class="mb-3 text-capitalize color-black">Nicole Cross</h3>
-                    <h5 class="mb-3 text-capitalize color-yellow">Visualizer</h5>
-                    <p class="mt-3 mb-3 color-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit augue.</p>
+                    <h3 class="mb-3 text-capitalize color-black">Mubeena Waqas</h3>
+                    <h5 class="mb-3 text-capitalize color-yellow">Lawyer</h5>
+                    <p class="mt-3 mb-3 color-black">Manages all corporate operations. </p>
                     <ul class="team-social">
                         <li class="d-inline-block"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                         <li class="d-inline-block"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -736,9 +738,9 @@
                     </div>
                     <div class="col-md-12 order-md-0">
                         <div class="team-classic-content hvr-team2 pink">
-                            <h3 class="mb-3 text-capitalize color-black">Albert Rodricks</h3>
-                            <h5 class="mb-3 text-capitalize color-pink">Creative Lead</h5>
-                            <p class="mt-3 mb-3 color-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit augue.</p>
+                            <h3 class="mb-3 text-capitalize color-black">Waqas Ahmed Saleem</h3>
+                            <h5 class="mb-3 text-capitalize color-pink">CEO/Accountant</h5>
+                            <p class="mt-3 mb-3 color-black">Lead Accountant at Brandidly</p>
                             <ul class="team-social">
                                 <li class="d-inline-block"><a href="javascript:void(0)" class="facebook-bg-hvr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                                 <li class="d-inline-block"><a href="javascript:void(0)" class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -772,12 +774,11 @@
 <!-- Quote ends -->
 
 <!-- Work Starts -->
-<section id="work" class="pb-0">
+<!-- <section id="work" class="pb-0">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <div class="main-title wow fadeIn" data-wow-delay="300ms">
-                    <h5> Lorem ipsum dolor sit amet </h5>
                     <h2 class="mb-0">Creative<span class="color-pink"> Portfolio</span> </h2>
                 </div>
             </div>
@@ -916,10 +917,11 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- Work ends -->
 
 <!-- Pricing start -->
+<!--
 <section id="pricing" class="bg-light-gray pricing-padding">
     <div class="container">
         <div class="row">
@@ -1005,11 +1007,13 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- Pricing ends -->
-
+<section id="contact-us">
+    <iframe width="540" height="1000" src="https://d0f1d444.sibforms.com/serve/MUIEANtsoeM32p_YrTSq-Eg8zGJGiYfXEup36zUrNIuy7INXDRsMLoAcLTNGGy6M6EhBPalzjFbUHLYI9m0yyQVtcLjYtxi5RArCerBw5AgoSvrSmEoUwQpI1WXkqYjabYHhRlFx1FYBw8IQCYrCW77mGOkiPHGeqpnYoH-1_Jv-4JTNwtxoyTzua-PGHVVHRSdCDpYPB4gZASrJ" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+</section>
 <!-- Clients start -->
-<section id="clients" class="bg-white p-0 cursor-light no-transition">
+<!-- <section id="clients" class="bg-white p-0 cursor-light no-transition">
     <h2 class="d-none">heading</h2>
     <div class="section-padding parallax-setting parallaxie parallax2">
         <div class="container">
@@ -1189,7 +1193,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- Clients ends -->
 
 <!-- Blog start -->
@@ -1234,15 +1238,15 @@
                     <div class="text-center text-md-left">
 
                         <!--Address-->
-                        <p class="mb-3">123 Street New York City , United States Of America. </p>
+                        <p class="mb-3">Av. Guerra Popular, 823, Maputo, Mozambique. </p>
 
                         <!--Phone-->
-                        <p class="mb-3"> Office Telephone : 001 01085379709 <br>
-                            Mobile : 001 63165370895 </p>
+                        <p class="mb-3"> Office Telephone : +258 84 927 6408 <br>
+                            Mobile : +258 86 579 6682</p>
 
                         <!--Email-->
-                        <p class="mb-3"> Email: <a href="mailto:email@website.com" class="color-black">admin@website.com</a> <br>
-                            Inquiries: <a href="mailto:email@website.com" class="color-black">email@website.com</a> </p>
+                        <p class="mb-3"> Email: <a href="mailto:brandid.ly@outlook.com" class="color-black">brandid.ly@outlook.com</a> <br>
+                            Inquiries: <a href="mailto:brandid.ly@outlook.com" class="color-black">brandid.ly@outlook.com</a> </p>
 
                         <!--Timing-->
                         <p class="mb-0">Mon-Sat: 9am to 6pm</p>
@@ -1268,7 +1272,6 @@
                     <li><a href="javascript:void(0)" class="wow fadeInUp google"><i class="fab fa-google"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown linkedin"><i class="fab fa-linkedin-in"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
-                    <li><a href="javascript:void(0)" class="wow fadeInDown pinterest"><i class="fab fa-pinterest-p"></i> </a> </li>
                 </ul>
                 <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Made with love by <a href="#">brandidly</a></p>
             </div>
