--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
             </div>
-            <a href="javascript:void(0)" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 84 927 6408</a>
+            <a href="https://wa.me/00258849276408" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 84 927 6408</a>
             <!-- side menu open button -->
             <a class="menu_bars d-inline-block menu-bars-setting animated-wrap sidemenu_toggle d-block d-lg-none">
                 <div class="menu-lines animated-element">
