Commited some changes

--- a/creative-studio/blog.html
+++ b/creative-studio/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>MegaOne - Creative Blog</title>
+    <title>Brandidly - Creative Blog</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png">
     <!-- Bundle -->
