--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
     <title>Brandidly - Creative Agency</title>
+    <meta
     <!-- Favicon -->
     <link rel="icon" href="creative-studio/img/favicon.png">
     <!-- Bundle -->
@@ -64,7 +65,7 @@
                     <li class="nav-item"> <a href="#pricing" class="scroll nav-link">pricing</a></li>
                     <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li> -->
                     <li class="nav-item"> <a href="#contact-us" class="scroll nav-link">contact us</a></li>
-                    <li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>
+                    <!--<li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>-->
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
             </div>
@@ -109,7 +110,7 @@
                     <li class="nav-item"> <a href="#pricing" class="scroll nav-link">pricing</a></li> -->
                     <!-- <li class="nav-item"> <a href="#clients" class="scroll nav-link">clients</a></li> -->
                     <li class="nav-item"> <a href="#contact-us" class="scroll nav-link">contact us</a></li>
-                    <li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>
+                    <!--<li class="nav-item"> <a href="#blog" class="scroll nav-link">blog</a></li>-->
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
             </nav>
@@ -573,7 +574,9 @@
         <div class="row">
             <div class="col-lg-6 pr-5 mb-5 mb-lg-0 wow fadeInLeft">
                 <div class="rare-box"></div>
-                <img src="creative-studio/img/about.jpg" class="about-img-small position-relative w-100" alt="">
+                <iframe src="https://player.vimeo.com/video/458175582" class="about-img-small position-relative w-100" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+               <!--  <img src="creative-studio/img/about.jpg" class="about-img-small position-relative w-100" alt=""> -->
             </div>
             <div class="col-lg-6 pl-6">
                 <div class="main-title text-lg-left offset-md-1 mb-0 wow fadeInUp" data-wow-delay="300ms">
@@ -1196,7 +1199,7 @@
 </section> -->
 <!-- Clients ends -->
 
-<!-- Blog start -->
+<!-- Blog start 
 <section id="blog" class="half-section p-0 bg-change bg-yellow">
     <h2 class="d-none">heading</h2>
     <div class="container-fluid">
@@ -1223,7 +1226,7 @@
         </div>
     </div>
 </section>
-<!-- Blog ends -->
+Blog ends -->
 
 <!-- Contact & Map starts -->
 <section id="contact" class="bg-light-gray">
